fixed input to look good on mobile screens

--- a/css/style.css
+++ b/css/style.css
@@ -747,6 +747,11 @@ video {
   margin-bottom: 1rem;
 }
 
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -1386,6 +1391,22 @@ video {
   text-transform: capitalize;
 }
 
+.leading-3 {
+  line-height: .75rem;
+}
+
+.leading-6 {
+  line-height: 1.5rem;
+}
+
+.leading-4 {
+  line-height: 1rem;
+}
+
+.leading-5 {
+  line-height: 1.25rem;
+}
+
 .tracking-widest {
   letter-spacing: 0.1em;
 }
@@ -1440,8 +1461,28 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.outline-2 {
+  outline-width: 2px;
+}
+
+.outline-4 {
+  outline-width: 4px;
+}
+
+.outline-8 {
+  outline-width: 8px;
+}
+
 .outline-emerald-600 {
   outline-color: #059669;
+}
+
+.outline-emerald-500 {
+  outline-color: #10b981;
+}
+
+.outline-emerald-700 {
+  outline-color: #047857;
 }
 
 .backdrop-blur-sm {
@@ -1582,6 +1623,22 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.focus\:shadow-lg:focus {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.focus\:shadow-xl:focus {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.focus\:outline-8:focus {
+  outline-width: 8px;
+}
+
 .focus\:outline-emerald-600:focus {
   outline-color: #059669;
 }
@@ -1679,6 +1736,14 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.dark .dark\:outline-black {
+  outline-color: #000;
+}
+
+.dark .dark\:outline-white {
+  outline-color: #fff;
+}
+
 .dark .dark\:hover\:bg-neutral-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(64 64 64 / var(--tw-bg-opacity));
@@ -1701,6 +1766,10 @@ video {
 @media (min-width: 368px) {
   .xs\:h-\[178px\] {
     height: 178px;
+  }
+
+  .xs\:w-3\/4 {
+    width: 75%;
   }
 
   .xs\:text-base {
@@ -1755,6 +1824,14 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:w-4\/5 {
+    width: 80%;
+  }
+
+  .sm\:w-3\/4 {
+    width: 75%;
+  }
+
   .sm\:px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
@@ -1836,6 +1913,11 @@ video {
 
   .md\:pr-1 {
     padding-right: 0.25rem;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 
   .md\:hover\:text-emerald-600:hover {
